# agent-safe

./: .gitignore  Makefile  README.md
agentsafe/: README.md  pyproject.toml
agentsafe/agentsafe/: __init__.py  cli.py
agentsafe/agentsafe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentsafe/agentsafe/approvals/: grants.py
agentsafe/agentsafe/audit/: integrity.py  ledger.py  render.py  trace.py
agentsafe/agentsafe/integrations/: __init__.py  model.py  registry.py
agentsafe/agentsafe/net/: allowproxy.py
agentsafe/agentsafe/policy/: backend.py  evaluate.py  factory.py  load.py  model.py  opa_backend.py  output_controls.py  profiles.py  rbac.py  yaml_backend.py
agentsafe/agentsafe/proxy/: modeb_proxy.py
agentsafe/agentsafe/ui/: __init__.py  (+1 more)
agentsafe/tests/: run_opa_live_test.sh  test_audit_dashboard.py  test_audit_integrity.py  test_audit_ledger_chain.py  test_audit_trace.py  test_audit_trace_verify.py  test_docker_runner_trace.py  test_domain_allowlist.py  test_firecracker_runner.py  test_grants.py  test_light_gateway_adapter.py  test_modeb_contract_flow.py  test_modeb_proxy.py  test_opa_backend.py  test_opa_live_integration.py  test_openclaw_auto_adapter.py  test_openclaw_fixture_normalizer.py  test_openclaw_strict_adapter.py  test_openclaw_strict_legacy_adapter.py  test_openclaw_strict_v2_adapter.py  test_output_controls.py  test_path_rules.py  test_policy_bundle.py  test_policy_eval.py  test_policy_profiles.py  test_policy_trust.py  test_rbac.py  test_sandbox_factory.py  test_telemetry_exporter.py  test_ui_server.py
(+44 files in other folders)
